# CommetAI

./: .gitignore  config.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 0bfa8dd3045e_.py  226b871ff235_.py  92021d8a4a26_.py  b02aa443d67c_.py  e4cc4ee7f3bd_.py  ec36b5d978ca_.py
src/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/board/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
src/core/: database.py  dependencies.py  exceptions.py  mock.py
src/projects/: models.py  repository.py  router.py  schemas.py  service.py
src/webhook/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
